manifests/06-network/04-allow-nextcloud-to-minio.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nextcloud-to-minio
  namespace: storage
spec:
  podSelector:
    matchLabels:
      app: minio
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: nextcloud
      ports:
        - protocol: TCP
          port: 9000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nextcloud-egress-to-minio
  namespace: storage
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: nextcloud
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: minio
      ports:
        - protocol: TCP
          port: 9000
